# todomvc-rust-fullstack-example

./: .gitignore  Cargo.toml  Makefile.toml  README.md  README.org
backend/: Cargo.toml  Makefile.toml  Rocket.toml
backend/migrations/2021-08-11-134633_task/: down.sql  up.sql
backend/src/: main.rs
backend/src/lib/: mod.rs
backend/src/lib/db/: mod.rs  models.rs  schema.rs
backend/static/: index-c92280644119363e.js
frontend/: Cargo.toml  Makefile.toml  index.html
frontend/src/: main.rs
frontend/src/lib/: mod.rs  state.rs
shared/: Cargo.toml  Makefile.toml
shared/src/: lib.rs
