[package]
name = "todomvc-backend"
version = "0.1.0"
authors = ["Po-Yeh Chen <smb374.cs08@nctu.edu.tw>"]
license = "MIT"
license-file = "../LICENSE"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = [
    "secrets",
    "tls",
    "msgpack",
    "json",
    "uuid",
] }
serde = { version = "1.0.127", features = ["std", "derive"] }
bincode = "1.3.3"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
diesel = { version = "1.4.7", default-features = false, features = [
    "postgres",
    "uuidv07",
    "r2d2",
] }
r2d2 = "0.8.9"
tokio-diesel = { git = "https://github.com/mehcode/tokio-diesel" }
getset = "0.1.1"
thiserror = "1.0.26"
futures = "0.3.16"
todomvc-shared = { path = "../shared" }
