[package]
name = "todomvc-frontend"
version = "0.1.0"
authors = ["Po-Yeh Chen <smb374.cs08@nctu.edu.tw>"]
license = "MIT"
license-file = "../LICENSE"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.18.0", features = ["msgpack"] }
serde = { version = "1.0.127", features = ["std", "derive"] }
strum = { version = "0.21.0", features = ["derive"] }
anyhow = "1.0.42"
todomvc-shared = { path = "../shared" }
uuid = { version = "0.8.2", features = ["serde", "v4", "wasm-bindgen"] }
