[package]
name = "todomvc-shared"
version = "0.1.0"
authors = ["Po-Yeh Chen <smb374.cs08@nctu.edu.tw>"]
license = "MIT"
license-file = "../LICENSE"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8.2", default-features = false, features = [
    "serde",
    "v4",
    "wasm-bindgen",
] }
getset = "0.1.1"
serde = { version = "1.0.127", features = ["derive"] }
